# skyeng-test

./: .gitignore  Makefile  README.md  docker-compose.yml  requirements-dev.txt
api/: api.dockerfile  celeryworker.dockerfile  worker-start.sh
api/app/: .dockerignore  pyproject.toml
api/app/app/: config.py  main.py
api/app/app/api/api_v1/: api.py
api/app/app/api/api_v1/endpoints/: files.py  users.py
api/app/app/core/: celery_app.py  celeryconfig.py  core_email.py  security.py  security_user.py
api/app/app/crud/: crud_base.py  crud_file.py  crud_user.py
api/app/app/db/: init_db.py
api/app/app/schemas/: constraint.py  scheme_error.py  scheme_file.py  scheme_user.py
api/app/app/tasks/: worker.py
scripts/: dev.sh
web/: web.dockerfile
web/app/: requirements.txt
web/app/app/: main.py
